fixed spacing for svg

--- a/client_app/src/styles/_eventLine.scss
+++ b/client_app/src/styles/_eventLine.scss
@@ -1,7 +1,7 @@
 .event_line_view {
     display: inline-block;
     // margin-top: 15px;
-    height: 100px;
+    // height: 100px;
     width: 100%;
     padding-left: 80px;
     padding-top: 10px;
@@ -59,5 +59,5 @@
 
 .branch-wrapper svg {
     width: 700px;
-    height: 50px;
+    //  min-height: 50px;
 }
